update styles and add clear all conversion function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="conversation-handler">
-      <button class="fixed-button">
+      <button class="fixed-button" id="clear-all-conversion">
         <div>
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -60,7 +60,7 @@
         </div>
         <span>Import data</span>
       </button>
-      <button class="fixed-button">
+      <button class="fixed-button" id="exportChat">
         <div>
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
